# tink-fpe-python

./: .flake8  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yml  scheduled_update.yml  tests.yml
src/tink_fpe/: __init__.py  _fpe.py  _fpe_ff3.py  _fpe_ffx_key_manager.py  _fpe_key_templates.py  _fpe_wrapper.py  _util.py
src/tink_fpe/proto/: __init__.py  fpe_ffx_pb2.py  fpe_ffx_pb2.pyi
tests/: __init__.py  test_fpe_ff3.py  test_fpe_ff3_kms.py  test_mysto.py  test_util.py
