[tool.poetry]
name = "tink-fpe"
version = "0.4.0"
description = "Format-Preserving Encryption support for Google Tink"
authors = ["Statistics Norway <stat-dev@ssb.no>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/statisticsnorway/tink-fpe-project"
repository = "https://github.com/statisticsnorway/tink-fpe-python"
documentation = "https://statisticsnorway.github.io/tink-fpe-project"
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.urls]
Changelog = "https://github.com/statisticsnorway/tink-fpe-python/releases"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
ff3 = ">=1.0.1"
tink = ">=1.7.0"
urllib3 = "<2"         # Fix Poetry resolution of boto3 package ref: https://github.com/orgs/python-poetry/discussions/7937#discussioncomment-5921842
protobuf = ">=3.20.1"


[tool.poetry.scripts]
tink-fpe = "tink_fpe.__main__:main" #TODO: Remove

[tool.poetry.group.dev.dependencies]
black = ">=21.10b0"
coverage = { extras = ["toml"], version = ">=6.2" }
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
isort = ">=5.10.1"
mypy = ">=0.930"
mypy-protobuf = ">=3.3.0"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
Pygments = ">=2.10.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
typeguard = ">=2.13.3"
xdoctest = { extras = ["colors"], version = ">=0.15.10" }
deptry = "^0.12.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"
types-protobuf = ">=3.20.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["tink_fpe"]
omit = ["*/proto/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = ['ff3', 'tink', 'tink.integration', 'tink.proto']
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
